<resources>
    <string name="app_name">AlWeather</string>
    <string name="city_country">Enugu, Nigeria</string>
    <string name="date_today">Friday, 8 July</string>
    <string name="current_temperature">26</string>
    <string name="weather_information"></string>
    <string name="temp_information"></string>

    <string name="wind">wind: </string>
    <string name="wind_deg">18 km/h</string>
    <string name="wind_speed">wind speed: </string>
    <string name="wind_speed_rate">18 km/h</string>

    <string name="humidity">humidity</string>
    <string name="humidity_rate">73%</string>


    <string name="atmospheric_pressure">atmospheric pressure: </string>
    <string name="atmospheric_pressure_rate">73%</string>

    <string name="sunrise">sunrise: </string>
    <string name="sunrise_time">73%</string>

    <string name="sunset">sunset </string>
    <string name="sunset_time">73%</string>

    <string name="day_of_week">Mon</string>
    <string name="location_hints">Type city name</string>
    <string name="location_example">Example Malmo, Sweden</string>
    <string name="add_new_location">Add new location</string>
    <string name="gps_location">use GPS</string>
    <string name="stored_location">You can only store 5 locations</string>
    <string name="save_button">SAVE</string>
    <string name="permission_notice">This permission is important but you can as well set your location on Location page</string>
    <string name="go_to_location">Go to location setting</string>
    <string name="digit_font">fonts/dsdigib.ttf</string>
    <string name="corki_font">fonts/corkiRegular.ttf</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="w200">thunderstorm with light rain</string>
    <string name="w201">thunderstorm with rain</string>
    <string name="w202">thunderstorm with heavy rain</string>
    <string name="w210">light thunderstorm</string>
    <string name="w211">thunderstorm</string>
    <string name="w212">heavy thunderstorm</string>
    <string name="w221">ragged thunderstorm</string>
    <string name="w230">thunderstorm with light drizzle</string>
    <string name="w231">thunderstorm with drizzle</string>
    <string name="w232">thunderstorm with heavy drizzle</string>
    <string name="w300">light intensity drizzle</string>
    <string name="w301">drizzle</string>
    <string name="w302">heavy intensity drizzle</string>
    <string name="w310">light intensity drizzle rain</string>
    <string name="w311">drizzle rain</string>
    <string name="w312">heavy intensity drizzle rain</string>
    <string name="w313">shower rain and drizzle</string>
    <string name="w314">heavy shower rain and drizzle</string>
    <string name="w321">shower drizzle</string>
    <string name="w500">light rain</string>
    <string name="w501">moderate rain</string>
    <string name="w502">heavy intensity rain</string>
    <string name="w503">very heavy rain</string>
    <string name="w504">extreme rain</string>
    <string name="w511">freezing rain</string>
    <string name="w520">light intensity shower rain</string>
    <string name="w521">shower rain</string>
    <string name="w522">heavy intensity shower rain</string>
    <string name="w531">ragged shower rain</string>
    <string name="w600">light snow</string>
    <string name="w601">snow</string>
    <string name="w602">heavy snow</string>
    <string name="w611">sleet</string>
    <string name="w612">shower sleet</string>
    <string name="w615">light rain and snow</string>
    <string name="w616">rain and snow</string>
    <string name="w620">light shower snow</string>
    <string name="w621">shower snow</string>
    <string name="w622">heavy shower snow</string>
    <string name="w701">mist</string>
    <string name="w711">smoke</string>
    <string name="w721">haze</string>
    <string name="w731">sand, dust whirls</string>
    <string name="w741">fog</string>
    <string name="w751">sand</string>
    <string name="w761">dust</string>
    <string name="w762">volcanic ash</string>
    <string name="w771">squalls</string>
    <string name="w781">tornado</string>
    <string name="w800">clear sky</string>
    <string name="w801">few clouds</string>
    <string name="w802">scattered clouds</string>
    <string name="w803">broken clouds</string>
    <string name="w804">overcast clouds</string>
    <string name="w900">tornado</string>
    <string name="w901">tropical storm</string>
    <string name="w902">hurricane</string>
    <string name="w903">cold</string>
    <string name="w904">hot</string>
    <string name="w905">windy</string>
    <string name="w906">hail</string>
    <string name="w951">calm</string>
    <string name="w952">light breeze</string>
    <string name="w953">gentle breeze</string>
    <string name="w954">moderate breeze</string>
    <string name="w955">fresh breeze</string>
    <string name="w956">strong breeze</string>
    <string name="w957">high wind, near gale</string>
    <string name="w958">gale</string>
    <string name="w959">severe gale</string>
    <string name="w960">storm</string>
    <string name="w961">violent storm</string>
    <string name="w962">hurricane</string>


</resources>
