<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alwh.alweather.UI.ConfigureFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <AutoCompleteTextView
            android:id="@+id/new_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botton_border"
            android:hint="@string/location_hints"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/location_example"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_10sdp" />

        <Button
            android:id="@+id/add_location_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/colorBackground"
            android:padding="@dimen/_12sdp"
            android:text="@string/add_new_location"
            android:textColor="@color/colorWhite" />


    </LinearLayout>

</FrameLayout>
