<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alwh.alweather.UI.WeatherFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <TextView
            style="@style/WeatherTextStyle"
            android:id="@+id/cityName"
            android:layout_marginTop="@dimen/_16sdp"
            android:textSize="@dimen/_24sdp" />

        <TextView
            style="@style/WeatherTextStyle"
            android:id="@+id/currentDate"
            android:layout_marginTop="@dimen/_8sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/weatherIconMain"
                android:layout_width="238dp"
                android:layout_height="150dp"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:src="@drawable/l10d" />

            <TextView
                style="@style/WeatherTextStyle"
                android:id="@+id/temperatureMain"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_weight="2"
                android:text="17.6"
                android:textSize="@dimen/_90sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical">


            <TextView
                style="@style/WeatherTextStyle"
                android:id="@+id/weatherInformation"/>

            <TextView
                style="@style/WeatherTextStyle"
                android:id="@+id/atmosphericPressure"
                android:text="@string/atmospheric_pressure" />

            <TextView
                style="@style/WeatherTextStyle"
                android:id="@+id/wind_deg"/>

            <TextView
                style="@style/WeatherTextStyle"
                android:id="@+id/windSpeed"/>

            <TextView
                style="@style/WeatherTextStyle"
                android:id="@+id/humidity"
                android:text="@string/humidity" />

            <TextView
                style="@style/WeatherTextStyle"
                android:id="@+id/sunrise"
                android:text="@string/sunrise"
                android:textColor="@color/colorWhite" />

            <TextView
                style="@style/WeatherTextStyle"
                android:id="@+id/sunset"
                android:text="@string/sunset"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_16sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/windMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingRight="@dimen/_16sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/humidityMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"

        android:background="#5F000000"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/weather_daily_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="1dp"
            android:layout_weight="2"
            android:dividerHeight="8dp"
            android:orientation="vertical"
            android:scrollbars="none" />
    </LinearLayout>
</LinearLayout>